bk_ida/gccida/g1/do_compare_and_jump
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_compare_and_jump/src/expr.c:10532:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code signed_code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_compare_and_jump/src/expr.c:10533:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code unsigned_code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_compare_and_jump/src/expr.c:10572:58: error: use of undeclared identifier 'machine_mode'
do_compare_rtx_and_jump( op0, op1, unsigned_code, v14, ( machine_mode)v13, v15, if_false_label, if_true_label); 
                                                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_compare_and_jump/src/obj/expr.o] Error 1
